<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_browse"
        android:icon="@drawable/ic_nav_browse"
        android:title="@string/nav_browse" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_nav_events"
        android:title="@string/nav_events" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_nav_messages"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
